--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -2,31 +2,43 @@
 html,
 body,
 #app {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    /* min-width: 1366px; */
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  /* min-width: 1366px; */
 }
 
 .el-breadcrumb {
-    margin-bottom: 15px;
-    font-size: 12px;
+  margin-bottom: 15px;
+  font-size: 12px;
 }
 
 .el-card {
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15) !important;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15) !important;
 }
 
 .el-table {
-    margin-top: 15px;
-    font-size: 12px;
+  margin-top: 15px;
+  font-size: 12px;
 }
 
 .el-pagination {
-    margin-top: 15px;
+  margin-top: 15px;
 }
 
 .el-cascader-menu {
-    height: 300px;
-    width: 200px;
+  height: 300px;
+  width: 200px;
+}
+.el-steps {
+  margin: 15px 0;
+}
+.el-step__title {
+  font-size: 13px;
+}
+.ql-editor {
+  min-height: 300px;
+}
+.addBtn {
+  margin-top: 15px;
 }
